Front-end Complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/styles/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>To do List</title>
 </head>
 <body>
@@ -20,8 +21,8 @@
             <div class="task">
                 <input type="checkbox" name="progress" class="progress">
                 <p class="task-description">tema de casa</p>
-                <div class="task-action">
-                    <a href="#" class="action-button edit-button">
+                <div class="task-actions">
+                    <a class="action-button edit-button">
                         <i class="fa-solid fa-pen-to-square"></i>
                     </a>
                     <a href="#" class="action-button delete-button">
@@ -37,6 +38,7 @@
             </div>
         </div>
     </div>
+    <script src="/src/javascript/script.js"></script>
     
 </body>
 </html>
